fix spacing in slide menu

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -30,4 +30,5 @@ nav {
   left: 18.3em;
   width: 9em;
   margin: 0;
+  line-height: 275%;
 }
